// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`querytable basic 1`] = `
Array [
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="sula-template-query-table-fields-wrapper"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-4"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="name"
                title="name"
              >
                name
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-20"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
            style="margin-bottom: 0px;"
          >
            <div
              class="ant-col ant-col-16 ant-col-offset-8 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="sula-form-action-default"
                    style="display: flex; justify-content: flex-end;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            Query
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn"
                          type="button"
                        >
                          <span>
                            Reset
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    class="ant-table-wrapper sula-template-query-table"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-empty"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          class="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;

exports[`querytable fields length fields length > 3 1`] = `
Array [
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="sula-template-query-table-fields-wrapper"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input0"
                title="input0"
              >
                input0
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input1"
                title="input1"
              >
                input1
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input1"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input2"
                title="input2"
              >
                input2
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input2"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input3"
                title="input3"
              >
                input3
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input3"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input4"
                title="input4"
              >
                input4
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input4"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
            style="margin-bottom: 0px;"
          >
            <div
              class="ant-col ant-col-16 ant-col-offset-8 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="sula-form-action-default"
                    style="display: flex; justify-content: flex-end;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            Query
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn"
                          type="button"
                        >
                          <span>
                            Reset
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    class="ant-table-wrapper sula-template-query-table"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-empty"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          class="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;

exports[`querytable fields length fields length > 6 1`] = `
Array [
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="sula-template-query-table-fields-wrapper"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input0"
                title="input0"
              >
                input0
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input1"
                title="input1"
              >
                input1
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input1"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input2"
                title="input2"
              >
                input2
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input2"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input3"
                title="input3"
              >
                input3
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input3"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input4"
                title="input4"
              >
                input4
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input4"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px; display: none;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input5"
                title="input5"
              >
                input5
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input5"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px; display: none;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input6"
                title="input6"
              >
                input6
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input6"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px; display: none;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input7"
                title="input7"
              >
                input7
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input7"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
            style="margin-bottom: 0px;"
          >
            <div
              class="ant-col ant-col-16 ant-col-offset-8 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="sula-form-action-default"
                    style="display: flex; justify-content: flex-end;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            Query
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn"
                          type="button"
                        >
                          <span>
                            Reset
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <a>
                          <span>
                            Expand
                          </span>
                          <span
                            aria-label="down"
                            class="anticon anticon-down"
                            role="img"
                            style="transition: 0.3s all; transform: rotate(0turn);"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    class="ant-table-wrapper sula-template-query-table"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-empty"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          class="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;

exports[`querytable fields length fields length 3 1`] = `
Array [
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="sula-template-query-table-fields-wrapper"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input0"
                title="input0"
              >
                input0
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input1"
                title="input1"
              >
                input1
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input1"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-8"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-col-8 ant-form-item-label"
            >
              <label
                class=""
                for="input2"
                title="input2"
              >
                input2
              </label>
            </div>
            <div
              class="ant-col ant-col-16 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="input2"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sula-form-action-right"
        style="margin-bottom: 24px;"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                Query
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn"
              type="button"
            >
              <span>
                Reset
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    class="ant-table-wrapper sula-template-query-table"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-empty"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          class="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;

exports[`querytable layout layout span object 1`] = `
Array [
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="sula-template-query-table-fields-wrapper"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-row ant-form-item"
        >
          <div
            class="ant-col ant-col-8 ant-form-item-label"
          >
            <label
              class=""
              for="age"
              title="age"
            >
              age
            </label>
          </div>
          <div
            class="ant-col ant-col-16 ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  class="ant-input"
                  id="age"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-NaN"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-row ant-form-item"
            style="margin-bottom: 0px;"
          >
            <div
              class="ant-col ant-col-16 ant-col-offset-8 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="sula-form-action-default"
                    style="display: flex; justify-content: flex-end;"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            Query
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn"
                          type="button"
                        >
                          <span>
                            Reset
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    class="ant-table-wrapper sula-template-query-table"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-empty"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          class="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;
